lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:33: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:39: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:43: error: not found: value setPousseedesiree
  		setPousseedesiree(4) 
                ^Lander:49: error: not found: value setPousseedesiree
setPousseedesiree(4)
^Lander:51: error: not found: value setPousseedesiree
else setPousseedesiree(0)
     ^Lander:36: error: method position is defined twice
  conflicting symbols both originated in file 'plm.runtime78.Lander'
  	def position():Int =
            ^Lander:55: error: not found: value setPousseedesire
  		setPousseedesire(4)
                ^